Added only 100K data file to git